--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
 		"test": "grunt test",
 		"fix": "grunt fix"
 	},
-	"peerDependencies": {
-		"postcss-less": "6.0.0"
-	},
 	"devDependencies": {
 		"eslint-config-wikimedia": "0.20.0",
 		"grunt": "1.4.0",
@@ -14,6 +11,7 @@
 		"grunt-eslint": "23.0.0",
 		"grunt-stylelint": "0.16.0",
 		"stylelint-config-idiomatic-order": "8.1.0",
-		"stylelint-config-wikimedia": "0.13.0"
+		"stylelint-config-wikimedia": "0.13.0",
+		"postcss-less": "6.0.0"
 	}
 }
