--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
 	},
 	"devDependencies": {
 		"eslint-config-wikimedia": "0.20.0",
-		"grunt": "1.4.0",
 		"grunt-banana-checker": "0.9.0",
-		"grunt-eslint": "23.0.0",
-		"grunt-stylelint": "0.16.0",
+		"postcss-less": "6.0.0",
 		"stylelint-config-idiomatic-order": "8.1.0",
-		"stylelint-config-wikimedia": "0.13.0",
-		"postcss-less": "6.0.0"
+		"stylelint-config-wikimedia": "0.13.0"
 	}
 }
